# Model-Regression-Detection-System

./: .gitignore  Dockerfile  README.md  conftest.py  eval_report_v2_regression.html  eval_report_v3_subtle.html  pyproject.toml  requirements.txt  run_eval.py  streamlit_app.py  test_email_classifier.py
.deepeval/: .deepeval-cache.json  .deepeval_telemetry.txt  .latest_test_run.json
.github/workflows/: eval.yml
golden_dataset/: dataset_v1.json
prompts/: v1.yaml  v2.yaml  v3.yaml
src/: __init__.py  classifier.py  dataset_loader.py  deepeval_adapter.py  diff_engine.py  drift.py  eval_runner.py  mock_llm.py  models.py  prompt_loader.py  reporter.py  run_store.py  scoring.py  slack_alert.py
tests/: test_e2e.py
